@@ -1,3 +1,10 @@
+Fri Dec  2 02:28:38 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/swi.s: Enhance testcase.
+	* m_cpuctrl.c (m_swi): Only give error on Invalid SWI/SVC argument
+	during pass 2.
+	* symbol.c (symbolPrint): Symbol::areaDef can be NULL.
+
 Fri Dec  2 02:00:02 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* eval.c (evalUnop): Case Op_fsize: Fix FILE handle leak.
